--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -166,8 +166,6 @@ jobs:
       - vitest
     timeout-minutes: 30
 
-    if: false
-
     strategy:
       fail-fast: false
       matrix:
@@ -186,15 +184,13 @@ jobs:
       - name: init
         run: |
           echo "OWNER=${OWNER,,}" >> ${GITHUB_ENV}
+          echo "BASE_IMAGE=${{ needs.base.outputs.base }}" >> ${GITHUB_ENV}
 
       - name: 📥 Setup Node.js
         uses: ./.github/actions/setup-node
 
       - name: prepare apt proxy
         uses: ./.github/actions/prepare-proxy
-
-      - name: build
-        run: pnpm build
 
       - name: test distro
         run: docker buildx bake test-distro
@@ -216,9 +212,9 @@ jobs:
       matrix:
         tag:
           - dart
-          # - dotnet
-          # - erlang
-          # - flutter
+          - dotnet
+          - erlang
+          - flutter
           # - flux
           # - golang
           # - java
