--- a/test/Dockerfile.noble
+++ b/test/Dockerfile.noble
@@ -1,22 +1,33 @@
+ARG BASE_IMAGE=containerbase
+
 #--------------------------------------
-# Image: base
+# Image: containerbase
 #--------------------------------------
-FROM ghcr.io/containerbase/ubuntu:24.04 AS base
+FROM ghcr.io/containerbase/ubuntu:24.04 AS containerbase
+
+ARG TARGETARCH
+COPY dist/docker/ /
+COPY dist/cli/containerbase-cli-${TARGETARCH} /usr/local/containerbase/bin/containerbase-cli
 
 ARG APT_HTTP_PROXY
 ARG CONTAINERBASE_DEBUG
 ARG CONTAINERBASE_CDN
 ARG CONTAINERBASE_LOG_LEVEL
 
-ARG TARGETARCH
-
-COPY dist/docker/ /
-COPY dist/cli/containerbase-cli-${TARGETARCH} /usr/local/containerbase/bin/containerbase-cli
-
 RUN install-containerbase
 
 # renovate: datasource=github-tags packageName=git/git
 RUN install-tool git v2.46.0
+
+#--------------------------------------
+# Image: base
+#--------------------------------------
+FROM ${BASE_IMAGE} AS base
+
+ARG APT_HTTP_PROXY
+ARG CONTAINERBASE_CDN
+ARG CONTAINERBASE_DEBUG
+ARG CONTAINERBASE_LOG_LEVEL
 
 #--------------------------------------
 # Image: build
