test: revert distro tests

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -160,7 +160,6 @@ jobs:
   distro:
     runs-on: ubuntu-latest
     needs:
-      - base
       - bats
       - lint
       - vitest
@@ -184,13 +183,15 @@ jobs:
       - name: init
         run: |
           echo "OWNER=${OWNER,,}" >> ${GITHUB_ENV}
-          echo "BASE_IMAGE=${{ needs.base.outputs.base }}" >> ${GITHUB_ENV}
 
       - name: 📥 Setup Node.js
         uses: ./.github/actions/setup-node
 
       - name: prepare apt proxy
         uses: ./.github/actions/prepare-proxy
+
+      - name: build
+        run: pnpm build
 
       - name: test distro
         run: docker buildx bake test-distro
