test: convert missing files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -216,20 +216,20 @@ jobs:
           - dotnet
           - erlang
           - flutter
-          # - flux
-          # - golang
-          # - java
-          # - jb
-          # - helm
-          # - nix
-          # - node
-          # - php
-          # - powershell
-          # - python
-          # - ruby
-          # - rust
-          # - swift
-          # - latest
+          - flux
+          - golang
+          - java
+          - jb
+          - helm
+          - nix
+          - node
+          - php
+          - powershell
+          - python
+          - ruby
+          - rust
+          - swift
+          - latest
 
     env:
       TAG: ${{ matrix.tag }}
