--- a/test/java/Dockerfile
+++ b/test/java/Dockerfile
@@ -1,7 +1,32 @@
+ARG BASE_IMAGE=containerbase
+
+#--------------------------------------
+# Image: containerbase
+#--------------------------------------
+FROM ghcr.io/containerbase/ubuntu:20.04 AS containerbase
+
+ENV BASH_ENV=/usr/local/etc/env
+SHELL ["/bin/bash" , "-c"]
+
+ARG TARGETARCH
+COPY dist/docker/ /
+COPY dist/cli/containerbase-cli-${TARGETARCH} /usr/local/containerbase/bin/containerbase-cli
+
+ARG APT_HTTP_PROXY
+ARG CONTAINERBASE_CDN
+ARG CONTAINERBASE_DEBUG
+ARG CONTAINERBASE_LOG_LEVEL
+
+RUN install-containerbase
+
+# Used for tests
+# renovate: datasource=github-tags packageName=git/git
+RUN install-tool git v2.46.0
+
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ghcr.io/containerbase/ubuntu:20.04 AS base
+FROM ${BASE_IMAGE} AS base
 
 RUN touch /.dummy
 
@@ -9,20 +34,6 @@ ARG APT_HTTP_PROXY
 ARG CONTAINERBASE_CDN
 ARG CONTAINERBASE_DEBUG
 ARG CONTAINERBASE_LOG_LEVEL
-
-ENV BASH_ENV=/usr/local/etc/env
-SHELL ["/bin/bash" , "-c"]
-
-ARG TARGETARCH
-
-COPY dist/docker/ /
-COPY dist/cli/containerbase-cli-${TARGETARCH} /usr/local/containerbase/bin/containerbase-cli
-
-RUN install-containerbase
-
-# Used for tests
-# renovate: datasource=github-tags packageName=git/git
-RUN install-tool git v2.46.0
 
 COPY --chown=1000:0 test/java/test test
 WORKDIR /test
