--- a/test/golang/Dockerfile.arm64
+++ b/test/golang/Dockerfile.arm64
@@ -1,7 +1,32 @@
+ARG BASE_IMAGE=containerbase
+
+#--------------------------------------
+# Image: containerbase
+#--------------------------------------
+FROM ghcr.io/containerbase/ubuntu:20.04 AS containerbase
+
+ENV BASH_ENV=/usr/local/etc/env
+SHELL ["/bin/bash" , "-c"]
+
+ARG TARGETARCH
+COPY dist/docker/ /
+COPY dist/cli/containerbase-cli-${TARGETARCH} /usr/local/containerbase/bin/containerbase-cli
+
+ARG APT_HTTP_PROXY
+ARG CONTAINERBASE_CDN
+ARG CONTAINERBASE_DEBUG
+ARG CONTAINERBASE_LOG_LEVEL
+
+RUN install-containerbase
+
+# currently go doesn't install git
+# renovate: datasource=github-tags packageName=git/git
+RUN install-tool git v2.46.0
+
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ghcr.io/containerbase/ubuntu:20.04 AS base
+FROM ${BASE_IMAGE} AS base
 
 RUN uname -p | tee | grep aarch64
 RUN touch /.dummy
@@ -10,20 +35,6 @@ ARG APT_HTTP_PROXY
 ARG CONTAINERBASE_CDN
 ARG CONTAINERBASE_DEBUG
 ARG CONTAINERBASE_LOG_LEVEL
-
-ENV BASH_ENV=/usr/local/etc/env
-SHELL ["/bin/bash" , "-c"]
-
-ARG TARGETARCH
-
-COPY dist/docker/ /
-COPY dist/cli/containerbase-cli-${TARGETARCH} /usr/local/containerbase/bin/containerbase-cli
-
-RUN install-containerbase
-
-# currently go doesn't install git
-# renovate: datasource=github-tags packageName=git/git
-RUN install-tool git v2.46.0
 
 #--------------------------------------
 # Image: golang
