--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -121,14 +121,26 @@ jobs:
     needs: setup
     timeout-minutes: 15
 
+    outputs:
+      base: ${{ steps.init.outputs.base }}
+
     steps:
+      - name: docker-config
+        uses: containerbase/internal-tools@cf9251e0d7d116c60bf6b6c231d49267358e1df7 # v3.3.15
+        with:
+          command: docker-config
+
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         with:
           show-progress: false
 
       - name: init
+        id: init
         run: |
+          export base="ttl.sh/$(uuidgen):1h"
           echo "OWNER=${OWNER,,}" >> ${GITHUB_ENV}
+          echo "BASE=${base}" >> ${GITHUB_ENV}
+          echo "base=${base}" >> ${GITHUB_OUTPUT}
 
       - name: 📥 Setup Node.js
         uses: ./.github/actions/setup-node
@@ -140,7 +152,7 @@ jobs:
         run: pnpm build
 
       - name: test distro
-        run: docker buildx bake
+        run: docker buildx bake --set build-ttl.tags=${{env.BASE}} build-ttl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # CONTAINERBASE_CDN: ${{ vars.CONTAINERBASE_CDN }}
@@ -148,7 +160,6 @@ jobs:
   distro:
     runs-on: ubuntu-latest
     needs:
-      - base
       - bats
       - lint
       - vitest
@@ -236,15 +247,13 @@ jobs:
       - name: init
         run: |
           echo "OWNER=${OWNER,,}" >> ${GITHUB_ENV}
+          echo "BASE_IMAGE=${{ needs.base.outputs.base }}" >> ${GITHUB_ENV}
 
       - name: 📥 Setup Node.js
         uses: ./.github/actions/setup-node
 
       - name: prepare apt proxy
         uses: ./.github/actions/prepare-proxy
-
-      - name: build
-        run: pnpm build
 
       - name: test
         run: docker buildx bake test
