--- a/test/Dockerfile.distro
+++ b/test/Dockerfile.distro
@@ -1,7 +1,17 @@
+ARG BASE_IMAGE=latest
+
+
+#--------------------------------------
+# Images
+#--------------------------------------
+FROM ghcr.io/containerbase/ubuntu:20.04 AS focal
+FROM ghcr.io/containerbase/ubuntu:22.04 AS jammy
+FROM ghcr.io/containerbase/ubuntu:24.04 AS noble
+FROM ghcr.io/containerbase/ubuntu:24.04 AS latest
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ghcr.io/containerbase/ubuntu:24.04 AS base
+FROM ${BASE_IMAGE} AS base
 
 ARG TARGETARCH
 COPY dist/docker/ /
@@ -151,8 +161,13 @@ FROM build AS test-python
 
 # renovate: datasource=github-releases packageName=containerbase/python-prebuild
 RUN install-tool python 3.12.4
+
+# renovate: datasource=pypi
+RUN install-tool checkov 3.2.217
 # renovate: datasource=pypi
 RUN install-tool conan 2.6.0
+# renovate: datasource=pypi
+RUN install-tool copier 9.3.1
 # renovate: datasource=pypi
 RUN install-tool hashin 1.0.1
 # renovate: datasource=pypi
