--- a/test/Dockerfile.full
+++ b/test/Dockerfile.full
@@ -58,7 +58,7 @@ RUN install-tool docker v27.1.1
 # renovate: datasource=dotnet packageName=dotnet-sdk
 RUN install-tool dotnet 8.0.303
 
-# renovate: datasource=github-releases packageName=containerbase/flutter-prebuild
+# renovate: datasource=flutter-version
 RUN install-tool flutter 3.24.0
 
 # renovate: datasource=github-releases packageName=fluxcd/flux2
@@ -70,7 +70,7 @@ RUN install-tool git-lfs v3.5.1
 # renovate: datasource=github-releases packageName=gleam-lang/gleam
 RUN install-tool gleam 1.4.1
 
-# renovate: datasource=github-releases packageName=containerbase/golang-prebuild
+# renovate: datasource=docker versioning=docker
 RUN install-tool golang 1.22.6
 
 # renovate: datasource=github-releases packageName=helm/helm
@@ -119,7 +119,7 @@ FROM build AS test-erlang
 
 # renovate: datasource=github-releases packageName=containerbase/erlang-prebuild versioning=docker
 RUN install-tool erlang 27.0.0.0
-# renovate: datasource=github-releases packageName=elixir-lang/elixir
+# renovate: datasource=docker versioning=docker
 RUN install-tool elixir 1.17.2
 
 #--------------------------------------
@@ -137,7 +137,7 @@ RUN install-tool gradle 8.9
 #--------------------------------------
 FROM build AS test-node
 
-# renovate: datasource=github-releases packageName=containerbase/node-prebuild
+# renovate: datasource=github-releases packageName=containerbase/node-prebuild versioning=node
 RUN install-tool node v20.16.0
 # renovate: datasource=npm
 RUN install-tool pnpm 9.6.0
@@ -150,8 +150,8 @@ RUN install-tool yarn 4.4.0
 FROM build AS test-php
 
 # renovate: datasource=github-releases packageName=containerbase/php-prebuild
-RUN install-tool php 8.3.10
-# renovate: datasource=github-releases packageName=containerbase/composer-prebuild
+RUN install-tool php 8.3.9
+# renovate: datasource=github-releases packageName=composer/composer
 RUN install-tool composer 2.7.7
 
 #--------------------------------------
