--- a/test/flutter/Dockerfile
+++ b/test/flutter/Dockerfile
@@ -66,7 +66,7 @@ FROM build AS testb
 
 USER 1000
 
-# renovate: datasource=flutter-version
+# renovate: datasource=github-releases packageName=containerbase/flutter-prebuild
 RUN install-tool flutter 3.24.0
 
 RUN set -ex; \
@@ -83,7 +83,7 @@ RUN chown -R 1001 .
 
 USER 1001
 
-# renovate: datasource=flutter-version
+# renovate: datasource=github-releases packageName=containerbase/flutter-prebuild
 RUN install-tool flutter 3.24.0
 
 RUN set -ex; \
