--- a/test/Dockerfile.distro
+++ b/test/Dockerfile.distro
@@ -137,7 +137,7 @@ RUN install-tool gradle 8.9
 #--------------------------------------
 FROM build AS test-node
 
-# renovate: datasource=github-releases packageName=containerbase/node-prebuild
+# renovate: datasource=github-releases packageName=containerbase/node-prebuild versioning=node
 RUN install-tool node v20.16.0
 # renovate: datasource=npm
 RUN install-tool pnpm 9.6.0
