--- a/test/nix/Dockerfile
+++ b/test/nix/Dockerfile
@@ -30,7 +30,6 @@ ARG APT_HTTP_PROXY
 ARG CONTAINERBASE_CDN
 ARG CONTAINERBASE_DEBUG
 ARG CONTAINERBASE_LOG_LEVEL
-ARG GITHUB_TOKEN
 
 COPY --chown=1000:0 test/nix/test test
 WORKDIR /test
@@ -55,8 +54,9 @@ RUN set -ex; \
     --extra-experimental-features flakes \
     eval --raw --file flake.nix inputs.nixpkgs.url
 
-RUN set -ex; \
-  [ -n "$GITHUB_TOKEN" ] && export NIX_CONFIG="extra-access-tokens = github.com=${GITHUB_TOKEN}"; \
+RUN --mount=type=secret,id=GITHUB_TOKEN \
+  set -ex; \
+  [ -f /run/secrets/GITHUB_TOKEN ] && export NIX_CONFIG="extra-access-tokens = github.com=$(cat /run/secrets/GITHUB_TOKEN)"; \
   nix \
     --extra-experimental-features nix-command \
     --extra-experimental-features flakes \
@@ -82,8 +82,10 @@ RUN set -ex; \
     --extra-experimental-features flakes \
     eval --raw --file flake.nix inputs.nixpkgs.url
 
-RUN set -ex; \
-  [ -n "$GITHUB_TOKEN" ] && export NIX_CONFIG="extra-access-tokens = github.com=${GITHUB_TOKEN}"; \
+
+RUN --mount=type=secret,id=GITHUB_TOKEN \
+  set -ex; \
+  [ -f /run/secrets/GITHUB_TOKEN ] && export NIX_CONFIG="extra-access-tokens = github.com=$(cat /run/secrets/GITHUB_TOKEN)"; \
   nix \
     --extra-experimental-features nix-command \
     --extra-experimental-features flakes \
