Add distro test

--- a/test/Dockerfile.distro
+++ b/test/Dockerfile.distro
@@ -113,6 +113,9 @@ RUN install-tool jb v0.6.0
 # renovate: datasource=github-releases packageName=vmware-tanzu/carvel-vendir
 RUN install-tool vendir v0.42.0
 
+# renovate: datasource=github-releases packageName=jetify-com/devbox
+RUN install-tool devbox 0.12.0
+
 #--------------------------------------
 # Image: test-erlang
 #--------------------------------------
