chore(renovate): automerge copier

--- a/renovate.json
+++ b/renovate.json
@@ -57,6 +57,7 @@
         "bun",
         "bundler",
         "conan",
+        "copier",
         "corepack",
         "docker",
         "dotnet",
@@ -95,6 +96,7 @@
         "bundler",
         "corepack",
         "conan",
+        "copier",
         "docker",
         "dotnet",
         "git",
