--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vite": "5.4.10"
   },
   "dependencies": {
+    "@renovatebot/pep440": "3.0.20",
     "@sindresorhus/is": "7.0.1",
     "clipanion": "3.2.1",
     "common-tags": "1.8.2",
