--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
   },
   "packageManager": "pnpm@9.12.2",
   "engines": {
-    "node": ">=20.9.0",
+    "node": "^20.9.0 || ^22.11.0",
     "pnpm": "^9.0.0"
   },
   "pnpm": {
