--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "bats": "node tools/bats.js --timing --verbose-run",
     "build": "run-s 'build:*'",
     "build:cli": "node tools/esbuild.js",
-    "eslint": "eslint --cache --report-unused-disable-directives .",
-    "eslint-fix": "eslint --cache --fix --report-unused-disable-directives .",
+    "eslint": "eslint --cache .",
+    "eslint-fix": "eslint --cache --fix .",
     "lint": "run-s prettier eslint lint:types",
     "lint:types": "run-p 'lint:types:*'",
     "lint:types:default": "tsc",
@@ -59,6 +59,7 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "9.14.0",
     "@semantic-release/exec": "6.0.3",
     "@tsconfig/node20": "20.1.4",
     "@tsconfig/strictest": "2.0.5",
@@ -68,8 +69,6 @@
     "@types/node": "20.17.6",
     "@types/semver": "7.5.8",
     "@types/shelljs": "0.8.15",
-    "@typescript-eslint/eslint-plugin": "8.12.2",
-    "@typescript-eslint/parser": "8.12.2",
     "@vitest/coverage-v8": "2.1.4",
     "@vitest/eslint-plugin": "1.1.7",
     "@vitest/ui": "2.1.4",
@@ -87,8 +86,8 @@
     "eslint-import-resolver-typescript": "3.6.3",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jest": "28.8.3",
-    "eslint-plugin-jest-formatting": "3.1.0",
     "eslint-plugin-promise": "7.1.0",
+    "globals": "15.12.0",
     "husky": "9.1.6",
     "lint-staged": "15.2.10",
     "nock": "13.5.5",
@@ -100,6 +99,7 @@
     "tsx": "4.19.2",
     "type-fest": "4.26.1",
     "typescript": "5.6.3",
+    "typescript-eslint": "8.13.0",
     "vite": "5.4.10",
     "vite-tsconfig-paths": "5.0.1",
     "vitest": "2.1.4",
