--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@tsconfig/node20": "20.1.4",
     "@tsconfig/strictest": "2.0.5",
     "@types/common-tags": "1.8.4",
+    "@types/eslint-config-prettier": "6.11.3",
     "@types/global-agent": "2.1.3",
     "@types/ini": "4.1.1",
     "@types/node": "20.17.6",
