--- a/test/Dockerfile.distro
+++ b/test/Dockerfile.distro
@@ -86,7 +86,7 @@ RUN install-tool kubectl v1.31.2
 # renovate: datasource=github-releases packageName=kubernetes-sigs/kustomize
 RUN install-tool kustomize 5.5.0
 
-# renovate: datasource=github-tags packageName=NixOS/nix
+# renovate: datasource=datasource=github-releases packageName=containerbase/nix-prebuild
 RUN install-tool nix 2.24.10
 
 # renovate: datasource=github-releases packageName=PowerShell/PowerShell
