--- a/test/nix/Dockerfile.arm64
+++ b/test/nix/Dockerfile.arm64
@@ -37,7 +37,7 @@ ARG CONTAINERBASE_LOG_LEVEL
 #--------------------------------------
 FROM base AS test-nix
 
-# renovate: datasource=github-tags packageName=NixOS/nix
+# renovate: datasource=github-releases packageName=containerbase/nix-prebuild
 RUN install-tool nix 2.24.9
 
 #--------------------------------------
